--- a/css/styles.css
+++ b/css/styles.css
@@ -932,6 +932,7 @@ input.search:focus + label>svg {
   width: 35px;
   transform: rotate(45deg);
   position: absolute;
+  z-index: 1;
 }
 
 .label-new h4 {
@@ -1782,7 +1783,7 @@ fieldset {
   background-color: var(--basic-white);
   top:38px;
   width: 216px;
-  /* display: none; */
+  display: none;
 }
 
 .buying-bookmark a {
