fix(b10 b2) add minification, add prefix

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /*Variables*/
 
 :root {
@@ -40,14 +47,19 @@
   --special-extra-greylight: #EAEAEA;
   --test-color: #405069;
   --special-border-greylight: #D7DCDE;
+  --special-opacity024: rgba(0, 0, 0, 0.24);
+  --special-opacity015: rgba(0, 0, 0, 0.15);
 }
 
 .container  {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 940px;
   margin: 0 auto;
   padding: 0 0;
-  flex-wrap: wrap ;
+  -ms-flex-wrap: wrap ;
+      flex-wrap: wrap ;
 }
 
  .page {
@@ -65,7 +77,11 @@
   color: var(--basic-black);
   background-color:  var(--basic-background);
   min-height: 100%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: -webkit-min-content 1fr -webkit-min-content;
+  -ms-grid-rows: min-content 1fr min-content;
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content 1fr min-content;
 }
 
@@ -134,7 +150,8 @@ img {
 
 .logo-top {
   background-color: var(--basic-red);
-  box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: inset 0px -5px 0px var(--special-opacity024);
+          box-shadow: inset 0px -5px 0px var(--special-opacity024);
   min-width: 220px;
   height: 47px;
 }
@@ -159,9 +176,15 @@ img {
  }
 
  .shopping-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 42px;
   width: 150px;
 }
@@ -169,6 +192,8 @@ img {
 /*header-middle*/
 .header-middle {
   padding-top: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-bottom: 40px;
 }
@@ -179,9 +204,15 @@ img {
   font-weight: 700;
   font-size: 21px;
   line-height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: auto;
   height: 40px;
   border: 3px solid var(--basic-white);
@@ -236,11 +267,17 @@ img {
 .login-field {
   background-color: var(--basic-white);
   height: 45px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-width: 300px;
   margin-top: 29px;
-  justify-content: flex-end;
-  align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 50px;
 }
 
@@ -285,6 +322,8 @@ img {
 }
 
 .user-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 281px;
   min-height: 45px;
@@ -299,8 +338,12 @@ img {
 
 .user-navigation__signup {
   width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left:21px;
   margin-right: 12px;
 }
@@ -311,9 +354,15 @@ img {
 
 .user-navigation__registration {
   width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-top {
@@ -501,15 +550,21 @@ input.search:focus + label>svg {
 /*site-navigation*/
 
 .site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 60px;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding-left: 26px;
 }
 
 .site-navigation li {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .site-navigation a {
@@ -526,6 +581,8 @@ input.search:focus + label>svg {
 .breadcrumbs {
   width:100%;
   min-height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -616,7 +673,10 @@ input.search:focus + label>svg {
   position: relative;
   display: block;
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .filter-input-checkbox + label::before {
@@ -723,18 +783,26 @@ input.search:focus + label>svg {
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 220px 19px 220px 19px 220px;
   grid-template-columns: 220px 220px 220px;
   grid-gap: 19px;
-  justify-content: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   margin-top: 28px;
 }
 
 .index-grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 220px 20px 220px 20px 220px 20px 220px;
   grid-template-columns: 220px 220px 220px 220px;
   grid-gap: 20px;
-  justify-content: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   margin-top: 20px;
   margin-bottom: 10px;
 }
@@ -748,7 +816,8 @@ input.search:focus + label>svg {
 }
 
 .popular-manufacturer li:hover {
-  filter: drop-shadow(0px 4px 20px var(--basic-black-opacity-015));
+  -webkit-filter: drop-shadow(0px 4px 20px var(--basic-black-opacity-015));
+          filter: drop-shadow(0px 4px 20px var(--basic-black-opacity-015));
 }
 
 .popular-manufacturer li:active {
@@ -764,6 +833,8 @@ input.search:focus + label>svg {
 }
 
 .plate-materials {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
   position: relative;
   grid-area: materials;
   background-color: var(--special-yellow);
@@ -781,6 +852,8 @@ input.search:focus + label>svg {
 }
 
 .plate-instr {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   position: relative;
   grid-area: instr;
   background-color: var(--special-blue);
@@ -798,6 +871,8 @@ input.search:focus + label>svg {
 }
 
 .plate-tech {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
   position: relative;
   grid-area: tech;
   background-color: var(--special-violet);
@@ -815,6 +890,10 @@ input.search:focus + label>svg {
 }
 
 .plate-perfs {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-area: perfs ;
   position: relative;
 }
@@ -846,6 +925,8 @@ input.search:focus + label>svg {
 
 
 .plate-discount {
+  -ms-grid-row: 3;
+  -ms-grid-column: 5;
   position: relative;
   grid-area: discount;
   background-color: var(--special-green);
@@ -863,6 +944,8 @@ input.search:focus + label>svg {
 }
 
 .plate-ship {
+  -ms-grid-row: 5;
+  -ms-grid-column: 5;
   position: relative;
   grid-area: ship;
   background-color: var(--special-yellow);
@@ -880,11 +963,14 @@ input.search:focus + label>svg {
 }
 
 .category-plate {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 300px 20px 300px 20px 300px;
   grid-template-columns: 300px 300px 300px;
+  -ms-grid-rows: 123px 20px 123px 20px 123px;
   grid-template-rows: 123px 123px 123px;
   gap: 20px;
-  grid-template-areas:
+      grid-template-areas:
   "materials instr tech "
   "perfs perfs discount"
   " perfs perfs ship" ;
@@ -892,13 +978,19 @@ input.search:focus + label>svg {
 }
 
 .popular-product {
+  display:-webkit-box;
+  display:-ms-flexbox;
   display:flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   min-height: 89px;
   background-color: var(--basic-background);
   margin-top: 59px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .popular-product a {
@@ -919,7 +1011,8 @@ input.search:focus + label>svg {
 }
 
 .it1 li:hover {
-  filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
+  -webkit-filter: drop-shadow(0px 4px 20px var(--special-opacity015));
+          filter: drop-shadow(0px 4px 20px var(--special-opacity015));
 }
 
 .label-new {
@@ -930,7 +1023,9 @@ input.search:focus + label>svg {
   top: 5px;
   right: -27px;
   width: 35px;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
   position: absolute;
   z-index: 1;
 }
@@ -943,7 +1038,8 @@ input.search:focus + label>svg {
 .gridit>img {
   width: 194px;
   height: 164px;
-  object-fit: scale-down;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 
 .gridit h3 {
@@ -972,9 +1068,15 @@ input.search:focus + label>svg {
   height: 38px;
   margin-bottom: 21px;
   margin-left: 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
   border-radius: 3px 0 0 3px;
 }
@@ -991,6 +1093,8 @@ input.search:focus + label>svg {
 }
 
 .index-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 940px;
   margin: 0 auto;
@@ -999,15 +1103,25 @@ input.search:focus + label>svg {
 }
 
 .company {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 460px;
   margin-right:180px;
 }
 
  .contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 300px;
 }
 
@@ -1032,14 +1146,23 @@ input.search:focus + label>svg {
 .services-menu {
   margin-right: 80px;
   min-width: 240px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .services-menu__item {
   height: 61px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 22px;
   font-weight: 700;
   font-family: Cuprum, Arial, sans-serif;
@@ -1047,7 +1170,8 @@ input.search:focus + label>svg {
   line-height: 30px;
   color: var(--basic-white);
   background-color: var(--basic-grey);
-  box-shadow: 0px 1px 0px var(--basic-extra-dark), inset 0px 1px 0px var(--test-color);
+  -webkit-box-shadow: 0px 1px 0px var(--basic-extra-dark), inset 0px 1px 0px var(--test-color);
+          box-shadow: 0px 1px 0px var(--basic-extra-dark), inset 0px 1px 0px var(--test-color);
 }
 
 .services-menu li:hover {
@@ -1165,10 +1289,16 @@ input.search:focus + label>svg {
 .feedback-button,
 .modal-add-to-cart__buttons a {
   background-color: var(--basic-red);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 38px;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   font-family: Cuprum, Arial, sans-serif;
   font-style: normal;
@@ -1178,12 +1308,18 @@ input.search:focus + label>svg {
 }
 
 .plate-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 38px;
   width: 135px;
   margin-left: 23px;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   font-family: Cuprum, Arial, sans-serif;
   font-size: 14px;
@@ -1200,11 +1336,17 @@ input.search:focus + label>svg {
 }
 
 .plate-perfs__catalog-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-height: 38px;
   width: 135px;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   font-family: Cuprum, Arial, sans-serif;
   font-size: 14px;
@@ -1226,7 +1368,7 @@ input.search:focus + label>svg {
 
 .plate-perfs__title {
   position: absolute;
-  font-family: Cuprum;
+  font-family: Cuprum,  Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -1335,6 +1477,8 @@ ul,
 
 .page-navigation {
   margin-left: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 28px;
   margin-bottom: 60px;
@@ -1351,9 +1495,15 @@ ul,
 .page-navigation a {
   width: 100%;
   height:100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .page-navigation li:hover {
@@ -1403,9 +1553,13 @@ ul,
 }
 
 .footer-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding-left: 112px;
   padding-top: 23px;
 }
@@ -1423,8 +1577,11 @@ ul,
 }
 
 .category {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 10px;
 }
 
@@ -1450,6 +1607,8 @@ ul,
 }
 
 .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 34px;
   margin-right: 0px;
@@ -1457,9 +1616,15 @@ ul,
 
 .social-button {
   color: var(--basic-white);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 44px;
   height: 44px;
   background-color: var(--special-extra-navy);
@@ -1472,6 +1637,8 @@ ul,
 }
 
 .footer-feedback {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 300px;
 }
@@ -1649,7 +1816,8 @@ fieldset {
   padding: 0;
   border: 8px solid var(--basic-white);
   background-color: var(--special-toggle-greaylight);
-  box-shadow: 0 2px 1px 0 var(--basic-shadow-lightgrey);
+  -webkit-box-shadow: 0 2px 1px 0 var(--basic-shadow-lightgrey);
+          box-shadow: 0 2px 1px 0 var(--basic-shadow-lightgrey);
   border-radius: 50%;
   cursor: pointer;
 }
@@ -1711,7 +1879,8 @@ fieldset {
   background-color: var(--basic-green);
   border-radius: 2px;
   margin-bottom: 10px;
-  box-shadow: inset 0px -3px 0px var(--basic-green-shadow);
+  -webkit-box-shadow: inset 0px -3px 0px var(--basic-green-shadow);
+          box-shadow: inset 0px -3px 0px var(--basic-green-shadow);
 }
 
 .buy:hover,
@@ -1776,9 +1945,16 @@ fieldset {
 }
 
 .buying-bookmark {
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: var(--basic-white);
   top:38px;
@@ -1787,9 +1963,15 @@ fieldset {
 }
 
 .buying-bookmark a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bookmark {
@@ -1821,8 +2003,8 @@ fieldset {
   background-repeat: repeat;
   background-color: var(--basic-white);
   border-top: 7px solid var(--basic-red);
-  filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
-
+  -webkit-filter: drop-shadow(0px 4px 20px var(--special-opacity015));
+          filter: drop-shadow(0px 4px 20px var(--special-opacity015));
 }
 
 .modal-feedback {
@@ -1856,11 +2038,16 @@ fieldset {
 }
 
 .feedback-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-left: 80px;
   padding-right: 80px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 40px;
 }
 
@@ -1873,15 +2060,22 @@ fieldset {
 }
 
 .feedback-form p {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .feedback-form input,
 .feedback-form textarea {
   border: 2px solid var(--basic-greylight);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 2px;
 }
 
@@ -1938,12 +2132,17 @@ fieldset {
 }
 
 .modal-add-to-cart__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 61px;
   background-color: var(--special-lightgrey-background);
   padding: 44px 114px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .modal-add-to-cart__buttons a{
@@ -1956,11 +2155,31 @@ fieldset {
 }
 
 .gridit:hover {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px var(--special-opacity024);
+          box-shadow: 0px 4px 4px var(--special-opacity024);
 }
 
 .gridit:hover > .buying-bookmark {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+}
+
+.bar {
+  width:  80%;
+  margin-right: 20%;
+}
+
+.toggle toggle-min {
+  left: 5%;
+}
+
+.toggle toggle-max {
+  left: 70%;
+}
+
+.max-price {
+  left: 80%;
 }
 
 .visually-hidden {
